--- a/src/pages/fmhome/style.css
+++ b/src/pages/fmhome/style.css
@@ -242,6 +242,30 @@ video {
     vertical-align: middle;
 }
 
+.my-drawer {
+    position: relative;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  .my-drawer .am-drawer-sidebar {
+    background-color: #fff;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  .my-drawer .am-drawer-sidebar .am-list {
+    width: 300px;
+    padding: 0;
+  }
+
+  .sc-example {
+    padding-bottom: 13px;
+  }
+  .sub-title {
+    color: #888;
+    font-size: 14px;
+    padding: 30px 0 18px 0;
+      margin: 0;
+  }
 @keyframes clipMe {
 
     0%,
