--- a/src/pages/fmhome/style.css
+++ b/src/pages/fmhome/style.css
@@ -248,12 +248,13 @@ video {
     -webkit-overflow-scrolling: touch;
   }
   .my-drawer .am-drawer-sidebar {
+    width: 80%;
     background-color: #fff;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
   }
   .my-drawer .am-drawer-sidebar .am-list {
-    width: 300px;
+    width: 80%;
     padding: 0;
   }
 
